--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-sass": "^6.1.3",
+    "ember-cli-sass-lint": "^1.0.3",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -43,6 +44,8 @@
     "ember-rl-dropdown": "^0.10.1",
     "ember-source": "~2.14.0-beta.1",
     "ember-welcome-page": "^3.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-rtablada": "^4.1.0",
     "loader.js": "^4.2.3"
   },
   "engines": {
