--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli": "~2.14.0-beta.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.1.0",
+    "ember-cli-copyright": "^2.4.0",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-htmlbars": "^1.1.1",
